[tool.poetry]
name = "my_bluelog"
version = "0.1.0"
description = ""
authors = ["Thomas Young <yk_ecust_2007@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-login = "^0.5.0"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
