[tool.poetry]
name = "my_bluelog"
version = "0.1.0"
description = ""
authors = ["Thomas Young <yk_ecust_2007@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-login = "^0.5.0"
unidecode = "^1.1.1"
bootstrap-flask = "^1.2.0"
gunicorn = "^20.0.4"
flask-migrate = "^2.5.3"
python-dotenv = "^0.12.0"
flask-mail = "^0.9.1"
flask-moment = "^0.9.0"
flask-ckeditor = "^0.4.3"
flask-wtf = "^0.14.3"
PyMySQL = "^0.9.3"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
watchdog = "^0.10.2"
faker = "^4.0.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
